crates/tui/tests/storybook/snapshots/app_message::text_streams_via_deltas.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
stream of tokens.







─────────────────────────────────────  ─

────────────────────────────────────────
