crates/tui/tests/storybook/snapshots/app_message::thinking_block_then_answer.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
│ let me think about this carefully.

the answer is 42.





─────────────────────────────────────  ─

────────────────────────────────────────
