crates/tui/tests/storybook/snapshots/app_message::thinking_block_then_answer.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 40 12
  0   0  36 attrs=dim|italic
  8   0  37 fg=AnsiValue(237)
  8  37   1 fg=AnsiValue(244)
  8  39   1 fg=AnsiValue(237)
  9   1   1 fg=Black bg=White
 10   0  40 fg=AnsiValue(237)
 11   0  40 bg=AnsiValue(233)
