crates/tui/tests/storybook/snapshots/app_message::thinking_stream_title_sections.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
│ I’m thinking about deriving directories from paths.
│
│ Regarding the watcher, it needs to rescan on changes.

│ Assessing directory exclusions
│
│ I'm considering which directories to include or exclude.





─ ✿ working… ───────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                       1:1 100%
