crates/tui/tests/storybook/snapshots/app_message::turn_error_block.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
Working on it…




 error  provider returned 503: service unavailable
─ done ──────────────────────────────────────────────────  ─

────────────────────────────────────────────────────────────
