crates/tui/tests/storybook/snapshots/app_message::user_message_block_multiline_chrome.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
 let's plan this out.
 step 1: parse
 step 2: render
 step 3: ship


──────────────────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
