crates/tui/tests/storybook/snapshots/app_message::user_message_block_multiline_chrome.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 50 11
  0   0   1 bg=AnsiValue(236)
  0   1  20 bg=AnsiValue(236) attrs=bold
  0  21  28 bg=AnsiValue(236)
  0  49   1 bg=AnsiValue(235)
  1   0   1 bg=AnsiValue(236)
  1   1  13 bg=AnsiValue(236) attrs=bold
  1  14  35 bg=AnsiValue(236)
  1  49   1 bg=AnsiValue(243)
  2   0   1 bg=AnsiValue(236)
  2   1  14 bg=AnsiValue(236) attrs=bold
  2  15  34 bg=AnsiValue(236)
  2  49   1 bg=AnsiValue(243)
  3   0   1 bg=AnsiValue(236)
  3   1  12 bg=AnsiValue(236) attrs=bold
  3  13  36 bg=AnsiValue(236)
  3  49   1 bg=AnsiValue(243)
  4   0  49 bg=AnsiValue(236)
  4  49   1 bg=AnsiValue(243)
  6   0   6 fg=AnsiValue(208) attrs=bold
  6   6  10 fg=AnsiValue(244)
  6  16   2 fg=AnsiValue(244) attrs=dim
  6  18  30 fg=AnsiValue(244)
  7   0  50 fg=AnsiValue(237)
  8   1   1 fg=Black bg=White
  9   0  50 fg=AnsiValue(237)
 10   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 10  10  32 bg=AnsiValue(233)
 10  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
